--- a/app/signup/signup.component.html
+++ b/app/signup/signup.component.html
@@ -3,9 +3,6 @@
 </ActionBar>
 <ScrollView>
     <StackLayout class="page p-t-15">
-        <Button class="btn btn-outline" (tap)="onSignupWithSocialProviderButtonTap()" text="Sign up with Social Provider"></Button>
-
-        <Label class="m-t-10 text-center" text="or"></Label>
 
         <TextField class="m-t-10 m-b-10 m-l-15 m-r-15" hint="Name" autocorrect="false" autocapitalization="none" [(ngModel)]="name"></TextField>
         <TextField class="m-t-10 m-b-10 m-l-15 m-r-15" hint="Email Address" keyboardType="email" autocorrect="false" autocapitalization="none"
@@ -14,6 +11,6 @@
             [(ngModel)]="password"></TextField>
 
         <Button class="btn btn-primary" text="SIGN UP" (tap)="onSignupButtonTap()"></Button>
-        <Label class="m-t-10 m-b-10 m-l-15 m-r-15" text="Log in" [nsRouterLink]="['/login']"></Label>
+        <Label class="m-t-10 m-b-10 m-l-15 m-r-15" text="Back to sign in" [nsRouterLink]="['/login']" horizontalAlignment="center"></Label>
     </StackLayout>
 </ScrollView>
