--- a/app/app.android.scss
+++ b/app/app.android.scss
@@ -12,6 +12,10 @@
 @import './shared/animate';
 
 // Place any CSS rules you want to apply only on Android here
+ActionBar .fa {
+    padding: 40px;
+}
+
 .action-item {
     padding-right: 10;
 }
