--- a/app/cars/car-list.component.html
+++ b/app/cars/car-list.component.html
@@ -1,61 +1,90 @@
 <ActionBar class="action-bar">
-    <!-- Should remove the navigation button -->
-    <NavigationButton ios:visibility="collapsed"></NavigationButton>
-    <Button class="btn btn-primary" text="SIGN OUT" (tap)="onSignoutButtonTap()" horizontalAlignment="center"></Button>
+    <!--
+    Use the NavigationButton as a side-drawer button in Android because ActionItems are shown on the right side of the ActionBar
+    -->
+    <NavigationButton ios:visibility="collapsed" icon="res://menu" (tap)="onDrawerButtonTap()"></NavigationButton>
+    <!--
+    Use the ActionItem for IOS with position set to left. Using the NavigationButton as a side-drawer button in iOS is not possible, because its function is to always navigate back in the application.
+    -->
+    <ActionItem icon="res://navigation/menu" android:visibility="collapsed" (tap)="onDrawerButtonTap()"
+        ios.position="left">
+    </ActionItem>
+    <Label class="action-bar-title" text="Cars" horizontalAlignment="center"></Label>
 </ActionBar>
 
-<GridLayout class="page page-content">
-    <RadListView [items]="cars" (itemTap)="onCarItemTap($event)" class="list-group">
+
+
+<!--
+RadSideDrawer is a UI component part of the Progress NativeScript UI set of components.
+Learn more about the RadSideDrawer UI component and how it can be customized in this documentation article:
+http://docs.telerik.com/devtools/nativescript-ui/Controls/Angular/SideDrawer/getting-started
+The RadSideDrawer component is designed to be used as a root element and
+it shouldn't have any other siblings other than the <ActionBar> component.
+-->
+<RadSideDrawer #drawer showOverNavigation="true" [drawerTransition]="sideDrawerTransition">
     <!--
-    RadListView is a UI component part of the Progress NativeScript UI set of components.
-    Learn more about the RadListView UI component and how it can be customized in this documentation article:
-    http://docs.telerik.com/devtools/nativescript-ui/Controls/Angular/ListView/getting-started
-    This component is used to display the master list in the master-detail structure.
+    Use the tkDrawerContent directive to display the content of the app drawer on this page.
     -->
-        <ng-template tkListItemTemplate let-car="item">
-            <StackLayout class="list-group-item">
-                <GridLayout rows="*, *, *" columns="*, *" class="list-group-item-content">
-                    <Label [text]="car.name" class="text-primary font-weight-bold"></Label>
-                    <Label col="1" horizontalAlignment="right" class="list-group-item-text m-r-5">
-                        <FormattedString>
-                            <Span text="&euro;"></Span>
-                            <Span [text]="car.price"></Span>
-                            <Span text="/day"></Span>
-                        </FormattedString>
-                    </Label>
+    <StackLayout tkDrawerContent>
+        <MyDrawer [selectedPage]="'Cars'"></MyDrawer>
+    </StackLayout>
 
-                    <StackLayout row="1" class="hr-light m-t-5 m-b-5" colSpan="2"></StackLayout>
-
-                    <Image row="2" [src]="car.imageUrl" stretch="aspectFill" height="120" class="m-r-20" decodeHeight="120"></Image>
-                    <StackLayout row="2" col="1" verticalAlignment="center" class="list-group-item-text">
-                        <Label class="p-b-10">
-                            <!-- set fontFamily="system" to workaround "Service exited due to Segmentation fault: 11" error -->
-                            <FormattedString ios:fontFamily="system">
-                                <Span text="&#xf1b9;   " class="fa text-primary"></Span>
-                                <Span [text]="car.class"></Span>
+    <!--
+    Use the tkMainContent directive to display the content of the page when you have an app drawer.
+    -->
+    <GridLayout class="page page-content" tkMainContent>
+        <RadListView [items]="cars" (itemTap)="onCarItemTap($event)" class="list-group">
+        <!--
+        RadListView is a UI component part of the Progress NativeScript UI set of components.
+        Learn more about the RadListView UI component and how it can be customized in this documentation article:
+        http://docs.telerik.com/devtools/nativescript-ui/Controls/Angular/ListView/getting-started
+        This component is used to display the master list in the master-detail structure.
+        -->
+            <ng-template tkListItemTemplate let-car="item">
+                <StackLayout class="list-group-item">
+                    <GridLayout rows="*, *, *" columns="*, *" class="list-group-item-content">
+                        <Label [text]="car.name" class="text-primary font-weight-bold"></Label>
+                        <Label col="1" horizontalAlignment="right" class="list-group-item-text m-r-5">
+                            <FormattedString>
+                                <Span text="&euro;"></Span>
+                                <Span [text]="car.price"></Span>
+                                <Span text="/day"></Span>
                             </FormattedString>
                         </Label>
-                        <Label class="p-b-10">
-                            <!-- set fontFamily="system" to workaround "Service exited due to Segmentation fault: 11" error -->
-                            <FormattedString ios:fontFamily="system">
-                                <Span text="&#xf085;   " class="fa text-primary"></Span>
-                                <Span [text]="car.transmission"></Span>
-                                <Span text=" Transmission"></Span>
-                            </FormattedString>
-                        </Label>
-                        <Label>
-                            <!-- set fontFamily="system" to workaround "Service exited due to Segmentation fault: 11" error -->
-                            <FormattedString ios:fontFamily="system">
-                                <Span text="&#xf2dc;   " class="fa text-primary"></Span>
-                                <Span [text]="car.hasAC ? 'Yes' : 'No'"></Span>
-                            </FormattedString>
-                        </Label>
-                    </StackLayout>
-                </GridLayout>
-            </StackLayout>
-        </ng-template>
-    </RadListView>
+
+                        <StackLayout row="1" class="hr-light m-t-5 m-b-5" colSpan="2"></StackLayout>
+
+                        <Image row="2" [src]="car.imageUrl" stretch="aspectFill" height="120" class="m-r-20" decodeHeight="120"></Image>
+                        <StackLayout row="2" col="1" verticalAlignment="center" class="list-group-item-text">
+                            <Label class="p-b-10">
+                                <!-- set fontFamily="system" to workaround "Service exited due to Segmentation fault: 11" error -->
+                                <FormattedString ios:fontFamily="system">
+                                    <Span text="&#xf1b9;   " class="fa text-primary"></Span>
+                                    <Span [text]="car.class"></Span>
+                                </FormattedString>
+                            </Label>
+                            <Label class="p-b-10">
+                                <!-- set fontFamily="system" to workaround "Service exited due to Segmentation fault: 11" error -->
+                                <FormattedString ios:fontFamily="system">
+                                    <Span text="&#xf085;   " class="fa text-primary"></Span>
+                                    <Span [text]="car.transmission"></Span>
+                                    <Span text=" Transmission"></Span>
+                                </FormattedString>
+                            </Label>
+                            <Label>
+                                <!-- set fontFamily="system" to workaround "Service exited due to Segmentation fault: 11" error -->
+                                <FormattedString ios:fontFamily="system">
+                                    <Span text="&#xf2dc;   " class="fa text-primary"></Span>
+                                    <Span [text]="car.hasAC ? 'Yes' : 'No'"></Span>
+                                </FormattedString>
+                            </Label>
+                        </StackLayout>
+                    </GridLayout>
+                </StackLayout>
+            </ng-template>
+        </RadListView>
 
 
-    <ActivityIndicator [busy]="isLoading"></ActivityIndicator>
-</GridLayout>
+        <ActivityIndicator [busy]="isLoading"></ActivityIndicator>
+    </GridLayout>
+</RadSideDrawer>
