--- a/app/shared/my-drawer/my-drawer.component.html
+++ b/app/shared/my-drawer/my-drawer.component.html
@@ -11,7 +11,11 @@ Feel free to customize layouts and components to change how your app drawer look
 
     <ScrollView row="1">
         <StackLayout class="sidedrawer-content">
-            <MyDrawerItem title="Home" route="/home" icon="&#xf015;" [isSelected]="isPageSelected('Home')">
+            <MyDrawerItem title="Home" route="/home" icon="&#xf200;" [isSelected]="isPageSelected('Home')">
+            </MyDrawerItem>
+            <MyDrawerItem title="Facilities" route="/facilities" icon="&#xf015;" [isSelected]="isPageSelected('Facilities')">
+            </MyDrawerItem>
+            <MyDrawerItem title="Plants" route="/plants" icon="&#xf06c;" [isSelected]="isPageSelected('Plants')">
             </MyDrawerItem>
             <MyDrawerItem title="Cars" route="/cars" icon="&#xf1b9;" [isSelected]="isPageSelected('Cars')">
             </MyDrawerItem>
