--- a/app/shared/my-drawer/my-drawer.component.html
+++ b/app/shared/my-drawer/my-drawer.component.html
@@ -15,6 +15,8 @@ Feel free to customize layouts and components to change how your app drawer look
             </MyDrawerItem>
             <MyDrawerItem title="Facilities" route="/facilities" icon="&#xf015;" [isSelected]="isPageSelected('Facilities')">
             </MyDrawerItem>
+            <MyDrawerItem title="Items" route="/items" icon="&#xf0ad;" [isSelected]="isPageSelected('Items')">
+            </MyDrawerItem>
             <MyDrawerItem title="Plants" route="/plants" icon="&#xf06c;" [isSelected]="isPageSelected('Plants')">
             </MyDrawerItem>
             <MyDrawerItem title="Cars" route="/cars" icon="&#xf1b9;" [isSelected]="isPageSelected('Cars')">
