--- a/app/shared/my-drawer/my-drawer.component.html
+++ b/app/shared/my-drawer/my-drawer.component.html
@@ -19,13 +19,17 @@ Feel free to customize layouts and components to change how your app drawer look
             </MyDrawerItem>
             <MyDrawerItem title="Plants" route="/plants" icon="&#xf06c;" [isSelected]="isPageSelected('Plants')">
             </MyDrawerItem>
-            <MyDrawerItem title="Cars" route="/cars" icon="&#xf1b9;" [isSelected]="isPageSelected('Cars')">
+            <MyDrawerItem title="Packages" route="/packages" icon="&#xf009;" [isSelected]="isPageSelected('Packages')">
+            </MyDrawerItem>
+            <MyDrawerItem title="Cars (Demo Page)" route="/cars" icon="&#xf1b9;" [isSelected]="isPageSelected('Cars')">
             </MyDrawerItem>
             <MyDrawerItem title="Search" route="/search" icon="&#xf002;" [isSelected]="isPageSelected('Search')">
             </MyDrawerItem>
 
             <StackLayout class="hr-light"></StackLayout>
 
+            <MyDrawerItem title="Wallet" route="/wallet" icon="&#xf15a;" [isSelected]="isPageSelected('Wallet')">
+            </MyDrawerItem>
             <MyDrawerItem title="Settings" route="/settings" icon="&#xf013;" [isSelected]="isPageSelected('Settings')">
             </MyDrawerItem>
         </StackLayout>
