--- a/app/shared/my-drawer/my-drawer.component.html
+++ b/app/shared/my-drawer/my-drawer.component.html
@@ -13,22 +13,18 @@ Feel free to customize layouts and components to change how your app drawer look
         <StackLayout class="sidedrawer-content">
             <MyDrawerItem title="Home" route="/home" icon="&#xf200;" [isSelected]="isPageSelected('Home')">
             </MyDrawerItem>
-            <MyDrawerItem title="Facilities" route="/facilities" icon="&#xf015;" [isSelected]="isPageSelected('Facilities')">
-            </MyDrawerItem>
-            <MyDrawerItem title="Items" route="/items" icon="&#xf0ad;" [isSelected]="isPageSelected('Items')">
-            </MyDrawerItem>
-            <MyDrawerItem title="Plants" route="/plants" icon="&#xf06c;" [isSelected]="isPageSelected('Plants')">
-            </MyDrawerItem>
             <MyDrawerItem title="Packages" route="/packages" icon="&#xf009;" [isSelected]="isPageSelected('Packages')">
             </MyDrawerItem>
-            <MyDrawerItem title="Cars (Demo Page)" route="/cars" icon="&#xf1b9;" [isSelected]="isPageSelected('Cars')">
+            <MyDrawerItem title="Transfers" route="/transfers" icon="&#xf0d1;" [isSelected]="isPageSelected('Transfers')">
             </MyDrawerItem>
-            <MyDrawerItem title="Search" route="/search" icon="&#xf002;" [isSelected]="isPageSelected('Search')">
+            <MyDrawerItem title="Cars (Demo Page)" route="/cars" icon="&#xf1b9;" [isSelected]="isPageSelected('Cars')">
             </MyDrawerItem>
 
             <StackLayout class="hr-light"></StackLayout>
 
-            <MyDrawerItem title="Wallet" route="/wallet" icon="&#xf15a;" [isSelected]="isPageSelected('Wallet')">
+            <MyDrawerItem title="Payment" route="/payment" icon="&#xf09d;" [isSelected]="isPageSelected('Payment')">
+            </MyDrawerItem>
+            <MyDrawerItem title="Buy Kipo Credits" route="/credits" icon="&#xf15a;" [isSelected]="isPageSelected('Credits')">
             </MyDrawerItem>
             <MyDrawerItem title="Settings" route="/settings" icon="&#xf013;" [isSelected]="isPageSelected('Settings')">
             </MyDrawerItem>
