Polish credits and payment pages.

--- a/app/_app-common.scss
+++ b/app/_app-common.scss
@@ -4,6 +4,13 @@
 // Import shared animations
 @import './shared/animate';
 
+
+// nativescript card
+.cardStyle {
+    background-color: white;
+    color: #fff;
+}
+
 //Font icon
 .fa {
    font-family: "FontAwesome";
