--- a/app/credits/credits.component.html
+++ b/app/credits/credits.component.html
@@ -5,10 +5,31 @@
 
 <ScrollView>
   <StackLayout class="list-group-item">
-    <Label text="Your Credits" class="font-weight-bold m-t-20 m-t-10 m-b-10 m-l-20 m-r-20"></Label>
-    <StackLayout class="hr-light"></StackLayout>
-    <Label text="Buy credits to fund your account" class="m-t-10 m-b-10 m-l-20 m-r-20"></Label>
 
-    <Label text="<-- credit purchase option -->" class="m-t-10 m-b-10 m-l-20 m-r-20"></Label>
+    <GridLayout class="page page-content m-t-10 m-b-10 m-l-20 m-r-20" columns="*, auto, auto, auto, auto" rows="*">
+        <Label col="0" text="Your Credits" class="font-weight-bold"></Label>
+        <Label col="1" class="fa-b m-t-2" text="&#xf379; " horizontal-align="right"></Label>
+        <Label col="2" text="0.0000" horizontal-align="right"></Label>
+        <Label col="3" class="fa-b m-t-2 m-l-10" text="&#xf3d0; " horizontal-align="right"></Label>
+        <Label col="4" text="0.0000" horizontal-align="right"></Label>
+    </GridLayout>
+
+    <StackLayout class="hr-light"></StackLayout>
+    <Label text="Buy crypto-credits to fund your account" class="m-t-10 m-b-10 m-l-20 m-r-20"></Label>
+
+    <CardView class="cardStyle" margin="10" elevation="8" radius="3">
+      <GridLayout class="page page-content m-t-10 m-b-10" columns="110, auto" rows="auto">
+          <Label col="0" class="page-icon fa-b" text="&#xf379;" horizontal-align="right"></Label>
+          <Label col="1" class="page-placeholder" text="Buy $100 of Bitcoin" horizontal-align="left"></Label>
+      </GridLayout>
+    </CardView>
+
+    <CardView class="cardStyle" margin="10" elevation="8" radius="3">
+      <GridLayout class="page page-content m-t-10 m-b-10" columns="110, auto" rows="auto">
+          <Label col="0" class="page-icon fa-b" text="&#xf3d0;" horizontal-align="right"></Label>
+          <Label col="1" class="page-placeholder" text="Buy $50 of Monero" horizontal-align="left"></Label>
+      </GridLayout>
+    </CardView>
+
   </StackLayout>
 </ScrollView>
