--- a/app/payment/payment.component.html
+++ b/app/payment/payment.component.html
@@ -6,11 +6,32 @@
 <ScrollView>
   <StackLayout class="list-group-item">
     <Label text="Payment Methods" class="font-weight-bold m-t-20 m-t-10 m-b-10 m-l-20 m-r-20"></Label>
-    <Label text="<-- cards/crypto -->" class="font-weight-bold m-t-10 m-b-10 m-l-20 m-r-20"></Label>
+
+
+    <GridLayout class="page page-content m-t-10 m-b-10 m-l-20 m-r-20" columns="auto, auto" rows="*">
+        <Label row="0" col="0" class="fa-b m-t-2 m-r-10" text="&#xf379;" horizontal-align="right"></Label>
+        <Label row="0" col="1" text="0.0000" horizontal-align="right"></Label>
+    </GridLayout>
+
+    <GridLayout class="page page-content m-t-10 m-b-10 m-l-20 m-r-20" columns="auto, auto" rows="*">
+        <Label row="0" col="0" class="fa-b m-t-2 m-r-10" text="&#xf3d0;" horizontal-align="right"></Label>
+        <Label row="0" col="1" text="0.0000" horizontal-align="right"></Label>
+    </GridLayout>
+
     <Label text="Add Payment Method" class="text-primary m-t-10 m-b-10 m-l-20 m-r-20"></Label>
     <StackLayout class="hr-light"></StackLayout>
     <Label text="Promotions" class="font-weight-bold m-t-10 m-b-10 m-l-20 m-r-20"></Label>
-    <Label text="<-- promos/giftcards -->" class="font-weight-bold m-t-10 m-b-10 m-l-20 m-r-20"></Label>
-    <Label text="Add Promo/Gift Card" class="text-primary m-t-10 m-b-20 m-b-10 m-l-20 m-r-20"></Label>
+
+    <GridLayout class="page page-content m-t-10 m-b-10 m-l-20 m-r-20" columns="auto, auto" rows="*">
+        <Label row="0" col="0" class="fa m-t-2 m-r-10" text="&#xf091;" horizontal-align="right"></Label>
+        <Label row="0" col="1" text="Kipo Champion" horizontal-align="right"></Label>
+    </GridLayout>
+
+    <GridLayout class="page page-content m-t-10 m-b-10 m-l-20 m-r-20" columns="auto, auto" rows="*">
+        <Label row="0" col="0" class="fa m-t-2 m-r-10" text="&#xf0c3;" horizontal-align="right"></Label>
+        <Label row="0" col="1" text="Early Adopter" horizontal-align="right"></Label>
+    </GridLayout>
+
+    <Label text="Add Promo Code" class="text-primary m-t-10 m-b-20 m-b-10 m-l-20 m-r-20"></Label>
   </StackLayout>
 </ScrollView>
