Add view package detail page.

--- a/app/home/home.component.html
+++ b/app/home/home.component.html
@@ -32,6 +32,6 @@ it shouldn't have any other siblings other than the <ActionBar> component.
     -->
     <GridLayout class="page page-content" tkMainContent>
         <Label class="page-icon fa" text="&#xf200;"></Label>
-        <Label class="page-placeholder" text="<!-- Page content goes here -->"></Label>
+        <Label class="page-placeholder" text="Nothing to see here"></Label>
     </GridLayout>
 </RadSideDrawer>
