Remove bad styles.

--- a/app/_app-common.scss
+++ b/app/_app-common.scss
@@ -4,6 +4,8 @@
 // Import shared animations
 @import './shared/animate';
 
+// Import custom theme
+@import "./shared/custom";
 
 // nativescript card
 .cardStyle {
