--- a/app/shared/my-drawer-item/my-drawer-item.component.android.css
+++ b/app/shared/my-drawer-item/my-drawer-item.component.android.css
@@ -1,1 +1,1 @@
-.sidedrawer-list-item{padding-left:15}.sidedrawer-list-item Label{vertical-align:center;color:#022734}.sidedrawer-list-item .fa{width:20;margin-right:10}.sidedrawer-list-item.selected{background-color:#795548}.sidedrawer-list-item.selected Label{color:#fff}
+.sidedrawer-list-item{padding-left:15}.sidedrawer-list-item Label{vertical-align:center;color:#022734}.sidedrawer-list-item .fa{width:20;margin-right:10}.sidedrawer-list-item.selected{background-color:#7a4116}.sidedrawer-list-item.selected Label{color:#fff}
