--- a/app/shared/my-drawer/_my-drawer.component.scss
+++ b/app/shared/my-drawer/_my-drawer.component.scss
@@ -24,7 +24,7 @@ $sidedrawer-header-image-offset-bottom: 5;
     }
 
     .sidedrawer-header {
-        background-color: $ab-background;
+        background-color: #db7d34;
 
         .sidedrawer-header-brand {
             color: $ab-color;
