--- a/app/packages/package-detail-edit/package-detail-edit.component.html
+++ b/app/packages/package-detail-edit/package-detail-edit.component.html
@@ -1,9 +1,7 @@
 <ActionBar class="action-bar">
     <!--HACK - we should remove the navigation button-->
     <NavigationButton visibility="collapsed"></NavigationButton>
-    <ActionItem ios.position="left" android.position="left" (tap)="onCancelButtonTap()">
-        <Label text="Cancel" class="action-item"></Label>
-    </ActionItem>
+    <NavigationButton android.systemIcon="ic_menu_back" (tap)="onBackButtonTap()"></NavigationButton>
     <Label class="action-bar-title" text="Edit Package Details" horizontalAlignment="center"></Label>
     <ActionItem ios.position="right" android.position="right">
         <Label text="Done" class="action-item" verticalAlignment="center" (tap)="onDoneButtonTap()"
