--- a/app/shared/my-drawer/my-drawer.component.html
+++ b/app/shared/my-drawer/my-drawer.component.html
@@ -13,7 +13,9 @@ Feel free to customize layouts and components to change how your app drawer look
         <StackLayout class="sidedrawer-content">
             <MyDrawerItem title="Home" route="/home" icon="&#xf200;" [isSelected]="isPageSelected('Home')">
             </MyDrawerItem>
-            <MyDrawerItem title="Facilities" route="/facilities" icon="&#xf1b9;" [isSelected]="isPageSelected('Facilities')">
+            <MyDrawerItem title="Facilities" route="/facilities" icon="&#xf015;" [isSelected]="isPageSelected('Facilities')">
+            </MyDrawerItem>
+            <MyDrawerItem title="Plants" route="/plants" icon="&#xf06c;" [isSelected]="isPageSelected('Plants')">
             </MyDrawerItem>
             <MyDrawerItem title="Packages" route="/packages" icon="&#xf009;" [isSelected]="isPageSelected('Packages')">
             </MyDrawerItem>
