--- a/app/transfers/transfer-detail/transfer-detail.component.html
+++ b/app/transfers/transfer-detail/transfer-detail.component.html
@@ -1,112 +1,21 @@
 <ActionBar class="action-bar">
     <NavigationButton android.systemIcon="ic_menu_back" (tap)="onBackButtonTap()">
     </NavigationButton>
-    <Label class="action-bar-title" [text]="transfer.ManifestNumber" horizontalAlignment="center"></Label>
+    <Label class="action-bar-title" [text]="transfer.ShipperFacilityName" horizontalAlignment="center"></Label>
     <ActionItem ios.position="right" android.position="right" (tap)="onEditButtonTap()">
         <Label text="Edit" class="action-item"></Label>
     </ActionItem>
 </ActionBar>
-
-<GridLayout class="page page-content">
-    <ScrollView>
-        <GridLayout rows="auto, auto, auto">
-            <Image [src]="transfer.imageUrl" stretch="aspectFill" height="200" class="m-b-15" decodeHeight="200"></Image>
-
-            <GridLayout row="1" rows="*,*,*,*,*,*,*,*,*,*,*,*,*,*,*,*,*,*,*,*,*,*,*,*,*,*,*,*,*,*,*" columns="auto, auto">
-
-                <Label text="Id" class="p-l-15 p-b-10 m-r-20 text-secondary" row="0"></Label>
-                <Label [text]="transfer.Id" row="0" col="1" class="text p-b-10"></Label>
-
-                <Label text="ManifestNumber" class="p-l-15 p-b-10 m-r-20 text-secondary" row="1"></Label>
-                <Label [text]="transfer.ManifestNumber" row="1" col="1" class="text p-b-10"></Label>
-
-                <Label text="ShipperFacilityLicenseNumber" class="p-l-15 p-b-10 m-r-20 text-secondary" row="2"></Label>
-                <Label [text]="transfer.ShipperFacilityLicenseNumber" row="2" col="1" class="text p-b-10"></Label>
-
-                <Label text="ShipperFacilityName" class="p-l-15 p-b-10 m-r-20 text-secondary" row="3"></Label>
-                <Label [text]="transfer.ShipperFacilityName" row="3" col="1" class="text p-b-10"></Label>
-
-                <Label text="TransporterFacilityLicenseNumber" class="p-l-15 m-r-20 p-b-10 text-secondary" row="4"></Label>
-                <Label [text]="transfer.TransporterFacilityLicenseNumber" row="4" col="1" class="text p-b-10"></Label>
-
-                <Label text="TransporterFacilityName" class="p-l-15 p-b-10 m-r-20 text-secondary" row="5"></Label>
-                <Label [text]="transfer.TransporterFacilityName" row="5" col="1" class="text p-b-10"></Label>
-
-                <Label text="DriverName" class="p-l-15 p-b-10 m-r-20 text-secondary" row="6"></Label>
-                <Label [text]="transfer.DriverName" row="6" col="1" class="text p-b-10"></Label>
-
-                <Label text="DriverOccupationalLicenseNumber" class="p-l-15 p-b-10 m-r-20 text-secondary" row="7"></Label>
-                <Label [text]="transfer.DriverOccupationalLicenseNumber" row="7" col="1" class="text p-b-10"></Label>
-
-                <Label text="DriverVehicleLicenseNumber" class="p-l-15 p-b-10 m-r-20 text-secondary" row="8"></Label>
-                <Label [text]="transfer.DriverVehicleLicenseNumber" row="8" col="1" class="text p-b-10"></Label>
-
-                <Label text="VehicleMake" class="p-l-15 p-b-10 m-r-20 text-secondary" row="9"></Label>
-                <Label [text]="transfer.VehicleMake" row="9" col="1" class="text p-b-10"></Label>
-
-                <Label text="VehicleModel" class="p-l-15 p-b-10 m-r-20 text-secondary" row="10"></Label>
-                <Label [text]="transfer.VehicleModel" row="10" col="1" class="text p-b-10"></Label>
-
-                <Label text="VehicleLicensePlateNumber" class="p-l-15 p-b-10 m-r-20 text-secondary" row="11"></Label>
-                <Label [text]="transfer.VehicleLicensePlateNumber" row="11" col="1" class="text p-b-10"></Label>
-
-                <Label text="DeliveryCount" class="p-l-15 p-b-10 m-r-20 text-secondary" row="12"></Label>
-                <Label [text]="transfer.DeliveryCount" row="12" col="1" class="text p-b-10"></Label>
-
-                <Label text="ReceivedDeliveryCount" class="p-l-15 p-b-10 m-r-20 text-secondary" row="13"></Label>
-                <Label [text]="transfer.ReceivedDeliveryCount" row="13" col="1" class="text p-b-10"></Label>
-
-                <Label text="PackageCount" class="p-l-15 p-b-10 m-r-20 text-secondary" row="14"></Label>
-                <Label [text]="transfer.PackageCount" row="14" col="1" class="text p-b-10"></Label>
-
-                <Label text="ReceivedPackageCount" class="p-l-15 p-b-10 m-r-20 text-secondary" row="15"></Label>
-                <Label [text]="transfer.ReceivedPackageCount" row="15" col="1" class="text p-b-10"></Label>
-
-                <Label text="CreatedDateTime" class="p-l-15 p-b-10 m-r-20 text-secondary" row="16"></Label>
-                <Label [text]="transfer.CreatedDateTime" row="16" col="1" class="text p-b-10"></Label>
-
-                <Label text="CreatedByUserName" class="p-l-15 p-b-10 m-r-20 text-secondary" row="17"></Label>
-                <Label [text]="transfer.CreatedByUserName" row="17" col="1" class="text p-b-10"></Label>
-
-                <Label text="LastModified" class="p-l-15 p-b-10 m-r-20 text-secondary" row="18"></Label>
-                <Label [text]="transfer.LastModified" row="18" col="1" class="text p-b-10"></Label>
-
-                <Label text="DeliveryId" class="p-l-15 p-b-10 m-r-20 text-secondary" row="19"></Label>
-                <Label [text]="transfer.DeliveryId" row="5" col="19" class="text p-b-10"></Label>
-
-                <Label text="RecipientFacilityLicenseNumber" class="p-l-15 p-b-10 m-r-20 text-secondary" row="20"></Label>
-                <Label [text]="transfer.RecipientFacilityLicenseNumber" row="20" col="1" class="text p-b-10"></Label>
-
-                <Label text="RecipientFacilityName" class="p-l-15 p-b-10 m-r-20 text-secondary" row="21"></Label>
-                <Label [text]="transfer.RecipientFacilityName" row="21" col="1" class="text p-b-10"></Label>
-
-                <Label text="ShipmentTypeName" class="p-l-15 p-b-10 m-r-20 text-secondary" row="22"></Label>
-                <Label [text]="transfer.ShipmentTypeName" row="22" col="1" class="text p-b-10"></Label>
-
-                <Label text="ShipmentTransactionType" class="p-l-15 p-b-10 m-r-20 text-secondary" row="23"></Label>
-                <Label [text]="transfer.ShipmentTransactionType" row="23" col="1" class="text p-b-10"></Label>
-
-                <Label text="EstimatedDepartureDateTime" class="p-l-15 p-b-10 m-r-20 text-secondary" row="24"></Label>
-                <Label [text]="transfer.EstimatedDepartureDateTime" row="24" col="1" class="text p-b-10"></Label>
-
-                <Label text="ActualDepartureDateTime" class="p-l-15 p-b-10 m-r-20 text-secondary" row="25"></Label>
-                <Label [text]="transfer.ActualDepartureDateTime" row="25" col="1" class="text p-b-10"></Label>
-
-                <Label text="EstimatedArrivalDateTime" class="p-l-15 p-b-10 m-r-20 text-secondary" row="26"></Label>
-                <Label [text]="transfer.EstimatedArrivalDateTime" row="26" col="1" class="text p-b-10"></Label>
-
-                <Label text="ActualArrivalDateTime" class="p-l-15 p-b-10 m-r-20 text-secondary" row="27"></Label>
-                <Label [text]="transfer.ActualArrivalDateTime" row="27" col="1" class="text p-b-10"></Label>
-
-                <Label text="DeliveryPackageCount" class="p-l-15 p-b-10 m-r-20 text-secondary" row="28"></Label>
-                <Label [text]="transfer.DeliveryPackageCount" row="28" col="1" class="text p-b-10"></Label>
-
-                <Label text="DeliveryReceivedPackageCount" class="p-l-15 p-b-10 m-r-20 text-secondary" row="29"></Label>
-                <Label [text]="transfer.DeliveryReceivedPackageCount" row="29" col="1" class="text p-b-10"></Label>
-
-                <Label text="ReceivedDateTime" class="p-l-15 p-b-10 m-r-20 text-secondary" row="30"></Label>
-                <Label [text]="transfer.ReceivedDateTime" row="30" col="1" class="text p-b-10"></Label>
-            </GridLayout>
-        </GridLayout>
-    </ScrollView>
-</GridLayout>
+<ScrollView class="page" #scrollView (scroll)="onScroll($event, scrollView, topView)">
+	<StackLayout>
+		<StackLayout #topView height="200" style="background-image: url('https://terratracker.com/wp/wp-content/uploads/2016/12/terratracker-delivery-truck.jpg'); background-repeat: no-repeat; background-position: center; background-size: cover;">
+			<!-- this is the header for collapsing --->
+			<!-- Note: this can be any type of layout you want -->
+		</StackLayout>
+		<StackLayout width="100%" backgroundColor="white" padding="10">
+			<!--Add your page content here-->
+      <RadDataForm tkExampleTitle tkToggleNavButton [source]="transfer" [isReadOnly]="false">
+      </RadDataForm>
+		</StackLayout>
+	</StackLayout>
+</ScrollView>
