--- a/app/shared/my-drawer/my-drawer.component.html
+++ b/app/shared/my-drawer/my-drawer.component.html
@@ -15,6 +15,8 @@ Feel free to customize layouts and components to change how your app drawer look
             </MyDrawerItem>
             <MyDrawerItem title="Facilities" route="/facilities" icon="&#xf015;" [isSelected]="isPageSelected('Facilities')">
             </MyDrawerItem>
+            <MyDrawerItem title="Items" route="/items" icon="&#xf015;" [isSelected]="isPageSelected('Items')">
+            </MyDrawerItem>
             <MyDrawerItem title="Plants" route="/plants" icon="&#xf06c;" [isSelected]="isPageSelected('Plants')">
             </MyDrawerItem>
             <MyDrawerItem title="Packages" route="/packages" icon="&#xf009;" [isSelected]="isPageSelected('Packages')">
@@ -26,10 +28,10 @@ Feel free to customize layouts and components to change how your app drawer look
 
             <StackLayout class="hr-light"></StackLayout>
 
-            <MyDrawerItem title="Payment" route="/payment" icon="&#xf09d;" [isSelected]="isPageSelected('Payment')">
+            <!-- <MyDrawerItem title="Payment" route="/payment" icon="&#xf09d;" [isSelected]="isPageSelected('Payment')">
             </MyDrawerItem>
             <MyDrawerItem title="Buy Kipo Credits" route="/credits" icon="&#xf15a;" [isSelected]="isPageSelected('Credits')">
-            </MyDrawerItem>
+            </MyDrawerItem> -->
             <MyDrawerItem title="Settings" route="/settings" icon="&#xf013;" [isSelected]="isPageSelected('Settings')">
             </MyDrawerItem>
         </StackLayout>
